# me_admin_app

./: Dockerfile  README.md  consumer.py  docker-compose.yml  pyproject.toml
http_client/: crud.http  http-client.env.json
src/admin/: settings.py
src/products/: producer.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
