[tool.poetry]
name = "me-admin-app"
version = "0.1.0"
description = ""
authors = ["dovgalb <bogdandovgal1208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
